# ETL-Football-Analytics-Pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: football_etl_dag.py
data_processed/: dim_match.csv  dim_player.csv  dim_season.csv  dim_stadium.csv  dim_team.csv  fact_player_match_clean.csv  fact_team_match_clean.csv  fact_team_point.csv
data_raw/: dim_player.csv  dim_season.csv  dim_team.csv  fbref1.csv  fbref_fact_player_season_stats.csv  fbref_fact_team_match.csv  fbref_fact_team_season.csv  merged.csv  premier_league_last_5_seasons.csv  sofifa_player_bio_df.csv
docker/initdb/: 10-create-databases.sql
scr/: Extract.py  Load.py  Transform.py  database.ini  fact_season_team.ipynb  fact_season_team.py  flashfootball_crawler.py  transform.ipynb  ui.py
scr/_cache_soccerdata/: match_0030e686.html  match_006fb5b5.html  match_007b352e.html  match_00a73645.html  match_00bcfc31.html  match_00ea7906.html  match_017addef.html  match_017c9ca5.html  match_01904d1d.html  match_01aca132.html  match_0359c7d5.html  match_0486198b.html  match_068406dc.html  match_070bf86d.html  match_071b5820.html  match_0760a568.html  match_07fc721a.html  match_08114c35.html  match_08341569.html  match_083c4444.html  match_0844ff10.html  match_08607696.html  match_08947a10.html  match_098cd338.html  match_09909bf8.html  match_09b1742e.html  match_0ad90506.html  match_0b0733ce.html  match_0b8f50a5.html  match_0ba42648.html  match_0c994746.html  match_0e39f016.html  match_0e9002ec.html  match_0eaaf0ab.html  (+633 more)
test/: 123.py
